fix alignment on blurb, style button, adjust title

--- a/src/css/debate/speaking.module.css
+++ b/src/css/debate/speaking.module.css
@@ -9,7 +9,7 @@
 #title {
    font-family: "HelveticaNeue-CondensedBold", Helvetica;
    font-weight: bold;
-   opacity: .4;
+   opacity: .6;
    grid-column: 1 / 5;
    grid-row: 2 / span 1;
    z-index: 2;
@@ -22,12 +22,13 @@
 }
 
 #blurb {
-   grid-column: 3 / 4;
+   padding: 5em;
+   grid-column: 2 / 5;
    grid-row: 1 / span 1;
    color: white;
    z-index: 3;
    align-self: center;
-   font-family: "HelveticaNeue-Light"
+   font-family: "Avenir"
 }
 
 #button {
@@ -46,6 +47,16 @@
    color: #FFF;
    border-radius: 3px;
    font-size: 24px;
+   top: 0px;
+   left: 0px;
+   position: relative;
+   transition: all 800ms 200ms;
+}
+
+#button a:hover {
+   box-shadow: 2px 2px white, 4px 4px black;
+   top: -4px;
+   left: -4px;
 }
 
 @media screen and (orientation: portrait) {
